--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="argb">开启ARGB入口</string>
     <string name="shareLrc">分享任意歌曲歌词</string>
     <string name="no_update">不升级</string>
-    <string name="setting_change">重启手机生效</string>
+    <string name="hook_daily">记录每日推荐</string>
+    <string name="setting_change">重启云音乐或重启手机生效</string>
 </resources>
